[package]
name = "usermode-networking"
version = "0.1.0"
authors = ["Tim Geoghegan <timgeog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
bytes = "0.5.4"
internet-checksum = "0.2.0"
libc = "0.2.68"
nix = "0.17.0"
pretty-hex = "0.1.1"
